# backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yml
crates/api/: Cargo.toml  build.rs  diesel.toml
crates/api/migrations/2025-12-14-194951_init/: down.sql  up.sql
crates/api/migrations/2025-12-31-212507_add_team_slug/: down.sql  up.sql
crates/api/migrations/2026-02-05-093157_remove_team_invite/: down.sql  up.sql
crates/api/src/: db.rs  discord.rs  graphql.rs  lib.rs  main.rs
crates/api/src/db/: models.rs  schema.rs
crates/api/src/graphql/: auth.rs  captcha.rs  mutation.rs  query.rs
crates/api/src/graphql/captcha/: altcha.rs  cap.rs  dummy.rs
crates/api/src/graphql/handlers/: challenges.rs  event.rs  mod.rs  owned_resource.rs  repo.rs  sessions.rs  teams.rs  users.rs
crates/api/src/graphql/handlers/challenges/: export.rs  flags.rs  instances.rs  invalid_submissions.rs  solves.rs
crates/api/src/graphql/handlers/users/: details.rs
crates/manager/: Cargo.toml  build.rs
crates/manager/protos/: challenges.proto  repository.proto  shared.proto
crates/manager/src/: instances.rs  js.rs  main.rs  utils.rs
crates/manager/src/grpc/: challenges.rs  mod.rs  repository.rs
crates/manager/src/instances/: deploy.rs
crates/manager/src/repo/: event_config.rs  git.rs  mod.rs
crates/manager/src/repo/challenges/: compose.rs  dir_packer.rs  loader.rs  manifest.rs  metadata.rs  mod.rs  vm.rs
crates/manager/src/repo/challenges/compose/: service.rs  volume.rs
crates/manager/src/repo/challenges/compose/service/: deployment.rs  ingress.rs  networking.rs  service.rs  ssh.rs
crates/manager/src/repo/challenges/compose/service/deployment/: container.rs  environment.rs  security.rs  validation.rs  volumes.rs
crates/manager/src/repo/challenges/compose/service/networking/: policies.rs
crates/manager/src/repo/challenges/loader/: tera.rs
crates/manager/src/repo/challenges/manifest/: service.rs  volume.rs
crates/manager/src/templating/: mod.rs
crates/ssh-gateway/: Cargo.toml
crates/ssh-gateway/src/: controller.rs  cr.rs  gateway.rs  main.rs
scripts/: dev-run.sh  dev-setup.sh
