# SPDX-FileCopyrightText: Aaron Dewes <aaron@nirvati.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "plfanzen-api"
version.workspace = true
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
prost = "0.14.1"
tonic-prost = "0.14.1"
tonic = "0.14.1"
tracing-subscriber = "0.3.22"
juniper = "0.17.0"
juniper_hyper = "0.10.0"
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
tracing = "0.1.43"
diesel = { version = "2.3.4", features = ["chrono", "ipnet-address", "uuid", "without-deprecated"], default-features = false }
hyper-util = { version = "0.1.19", features = ["tracing", "server", "http1", "http2", "tokio"] }
argon2 = "0.5.3"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = "0.4.42"
uuid = { version = "1.19.0", features = ["serde", "v7"] }
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
rand_core = { version = "0.6.4", features = ["std"] }
serde = "1.0.228"
serde_json = "1.0.145"
base64 = "0.22.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
rand = "0.8"
thiserror = "2.0.17"
secrets = "1.2.0"
ipnet = "2.11.0"
diesel-async = { version = "0.7.4", features = ["migrations", "tokio", "postgres", "pool", "bb8"] }

[build-dependencies]
tonic-prost-build = "0.14"
