# SPDX-FileCopyrightText: Aaron Dewes <aaron@nirvati.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "plfanzen-manager"
version.workspace = true
edition = "2024"

[dependencies]
gix = { version = "0.75.0", features = ["tracing", "blocking-http-transport-reqwest-rust-tls"] }
k8s-openapi = { version = "0.26.0", features = ["v1_34"] }
kube = { version = "2.0.1", features = ["derive"] }
tera-with-js = "0.1.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs"] }
prost = "0.14.1"
tonic-prost = "0.14.1"
tonic = "0.14.1"
tracing-subscriber = "0.3.22"
tracing = "0.1.43"
thiserror = "2.0.17"
gitoxide-core = { version = "0.50.0", features = ["blocking-client", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4.42", features = ["serde"] }
tera = "1.20.1"
tempfile = "3.23.0"
serde_json = "1.0.148"
boa_engine = { version = "0.21.0", features = ["annex-b", "temporal", "intl"] }
boa_runtime = { version = "0.21.0", default-features = false, features = ["url"] }
k8s-crds-traefik = "3.6.0"
rand = "0.9.2"
compose_spec = "0.3.0"
tar = "0.4.44"
slugify = "0.1.0"
dotenvy = "0.15.7"
ignore = "0.4.25"
flate2 = "1.1.5"
indexmap = "2.12.1"
k8s-crds-kube-virt = "1.7.0"
schemars = "1.2.0"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.9"
k8s-crds-cilium = { version = "1.18.4", default-features = false }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3.23.0"
