[package]
name = "ssh-gateway"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
futures-util = "0.3.31"
k8s-openapi = { version = "0.26.1", features = ["v1_34"] }
kube = { version = "2.0.1", features = ["derive", "runtime"] }
rand_core = "0.6"
russh = "0.56.0"
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3.22"
